tests/ui/consts/refs_check_const_eq-issue-88384.stderr
warning: the feature `adt_const_params` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/refs_check_const_eq-issue-88384.rs:2:12
   |
LL | #![feature(adt_const_params)]
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #95174 <https://github.com/rust-lang/rust/issues/95174> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/refs_check_const_eq-issue-88384.rs:10:21
   |
LL | struct Foo<const T: CompileTimeSettings>;
   |                     ^^^^^^^^^^^^^^^^^^^

error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/refs_check_const_eq-issue-88384.rs:13:15
   |
LL | impl<const T: CompileTimeSettings> Foo<T> {
   |               ^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0741`.
